--- a/03-Representation/biblio_representation.bib
+++ b/03-Representation/biblio_representation.bib
@@ -35,3 +35,53 @@
    year={2004},
    month={Jun}
 }
+
+@article{Cottrell1998TheoreticalAO,
+  title={Theoretical aspects of the SOM algorithm},
+  author={Marie Cottrell and Jean-Claude Fort and Gilles Pag{\`e}s},
+  journal={Neurocomputing},
+  year={1998},
+  volume={21},
+  pages={119-138}
+}
+
+@inproceedings{Cottrell2016TheoreticalAA,
+  title={Theoretical and Applied Aspects of the Self-Organizing Maps},
+  author={Marie Cottrell and Madalina Olteanu and Fabrice Rossi and Nathalie Villa-Vialaneix},
+  booktitle={WSOM},
+  year={2016}
+}
+
+@article{Timme2013SynergyRA,
+  title={Synergy, redundancy, and multivariate information measures: an experimentalist’s perspective},
+  author={Nicholas M. Timme and Wesley Alford and Benjamin Flecker and John M. Beggs},
+  journal={Journal of Computational Neuroscience},
+  year={2013},
+  volume={36},
+  pages={119-140}
+}
+
+@article{Shannon1948AMT,
+  title={A mathematical theory of communication},
+  author={Claude E. Shannon},
+  journal={Bell Syst. Tech. J.},
+  year={1948},
+  volume={27},
+  pages={379-423}
+}
+
+@misc{hjelm2019learning,
+      title={Learning deep representations by mutual information estimation and maximization}, 
+      author={R Devon Hjelm and Alex Fedorov and Samuel Lavoie-Marchildon and Karan Grewal and Phil Bachman and Adam Trischler and Yoshua Bengio},
+      year={2019},
+      eprint={1808.06670},
+      archivePrefix={arXiv},
+      primaryClass={stat.ML}
+}
+
+@book{mackay2003information,
+  title={Information theory, inference and learning algorithms},
+  author={MacKay, David JC and Mac Kay, David JC},
+  year={2003},
+  publisher={Cambridge university press}
+}
